[gd_scene load_steps=28 format=3 uid="uid://bhm6etkpaiot3"]

[ext_resource type="Script" path="res://Scripts/Home.gd" id="1_omsou"]
[ext_resource type="FontFile" uid="uid://b1talsa0wfwtk" path="res://fonts/j foundry - colby black.otf" id="2_us1tt"]
[ext_resource type="PackedScene" uid="uid://cmfny35vwsquf" path="res://Objetos/superior_buttons.tscn" id="3_3dr4i"]
[ext_resource type="FontFile" uid="uid://cfxoy7q6ip6rl" path="res://fonts/SassoonSansStd-Bold.otf" id="3_iwwju"]
[ext_resource type="PackedScene" uid="uid://2cpqe74okskv" path="res://Objetos/internet_status.tscn" id="4_tycym"]
[ext_resource type="FontFile" uid="uid://7p3x2o37brcj" path="res://fonts/SassoonSansStd.otf" id="4_w66uw"]
[ext_resource type="Script" path="res://Scripts/ModalNet.gd" id="8_6gef0"]
[ext_resource type="Texture2D" uid="uid://d0f23cwgfxi7h" path="res://Sprites/GUI/cross.png" id="9_bynxh"]
[ext_resource type="PackedScene" uid="uid://bx3u6wb2xvxbr" path="res://Objetos/footer.tscn" id="10_f8pt2"]
[ext_resource type="Texture2D" uid="uid://cqoorftyf4bnp" path="res://Sprites/GUI/cross_hover.png" id="10_rjl4u"]

[sub_resource type="LabelSettings" id="LabelSettings_tmq6b"]
font = ExtResource("2_us1tt")
font_size = 42

[sub_resource type="LabelSettings" id="LabelSettings_dfxtu"]
font = ExtResource("3_iwwju")
font_size = 52

[sub_resource type="LabelSettings" id="LabelSettings_rbpyi"]
font = ExtResource("4_w66uw")
font_size = 22

[sub_resource type="LabelSettings" id="LabelSettings_j24dn"]
font = ExtResource("2_us1tt")
font_size = 31

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bs8a2"]
bg_color = Color(0.384314, 0.47451, 0.52549, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aplfh"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 52
corner_radius_top_right = 52
corner_radius_bottom_right = 52
corner_radius_bottom_left = 52

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bags8"]
bg_color = Color(0.384314, 0.47451, 0.52549, 1)
corner_radius_top_left = 52
corner_radius_top_right = 52
corner_radius_bottom_right = 52
corner_radius_bottom_left = 52

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8haym"]
bg_color = Color(0.384314, 0.47451, 0.52549, 1)
corner_radius_top_left = 52
corner_radius_top_right = 52
corner_radius_bottom_right = 52
corner_radius_bottom_left = 52

[sub_resource type="LabelSettings" id="LabelSettings_obaxc"]
font = ExtResource("2_us1tt")
font_size = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jnt4d"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pcsnd"]
bg_color = Color(0.384314, 0.47451, 0.52549, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a6x80"]
bg_color = Color(0.384314, 0.47451, 0.52549, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3bi21"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.129412, 0.607843, 0.843137, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="LabelSettings" id="LabelSettings_1ixde"]
font = ExtResource("3_iwwju")
font_size = 37
font_color = Color(0.388235, 0.47451, 0.52549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c0lun"]
bg_color = Color(0.388235, 0.47451, 0.52549, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dotgt"]
bg_color = Color(0.129412, 0.607843, 0.843137, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_46avw"]
bg_color = Color(0.129412, 0.607843, 0.843137, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[node name="Home" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_omsou")
metadata/_edit_lock_ = true

[node name="Footer" parent="CanvasLayer/Control" instance=ExtResource("10_f8pt2")]
layout_mode = 1
offset_right = 709.0
offset_bottom = 3.0

[node name="superiorButtons" parent="CanvasLayer/Control" instance=ExtResource("3_3dr4i")]
layout_mode = 1

[node name="Homebtn" parent="CanvasLayer/Control/superiorButtons" index="0"]
disabled = true

[node name="ButtonGDD" parent="CanvasLayer/Control/superiorButtons" index="1"]
visible = false

[node name="ButtonCurso" parent="CanvasLayer/Control/superiorButtons" index="2"]
visible = false

[node name="Flecha" parent="CanvasLayer/Control/superiorButtons" index="3"]
visible = false

[node name="Titulo" parent="CanvasLayer/Control/superiorButtons" index="4"]
visible = false

[node name="InternetStatus" parent="CanvasLayer/Control" instance=ExtResource("4_tycym")]
layout_mode = 1
offset_left = -99.0
offset_top = 20.0
offset_right = -21.0
offset_bottom = 98.0

[node name="Titulo" type="Label" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 27.0
offset_right = 394.0
offset_bottom = 108.0
grow_horizontal = 2
text = "Nombre del curso"
label_settings = SubResource("LabelSettings_tmq6b")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Texto" type="Control" parent="CanvasLayer/Control"]
layout_mode = 1
anchor_left = 0.036
anchor_top = 0.568
anchor_right = 0.479
anchor_bottom = 0.568
offset_left = 0.527996
offset_top = -253.064
offset_right = 0.191956
offset_bottom = 252.936
grow_vertical = 2

[node name="subtitulo" type="Label" parent="CanvasLayer/Control/Texto"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -249.96
offset_top = -12.896
offset_right = 369.04
offset_bottom = 68.104
grow_horizontal = 2
text = "¿Qué es sumo Primero?"
label_settings = SubResource("LabelSettings_dfxtu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Descripcion" type="Label" parent="CanvasLayer/Control/Texto"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.352
offset_top = -158.0
offset_right = 371.648
offset_bottom = 247.0
grow_horizontal = 2
grow_vertical = 2
text = "La aplicación es de una resolución de 1280x720 … Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
label_settings = SubResource("LabelSettings_rbpyi")
horizontal_alignment = 3
autowrap_mode = 2

[node name="Label2" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -501.0
offset_top = -3.0
offset_right = -134.0
offset_bottom = 53.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Recursos editables:"
label_settings = SubResource("LabelSettings_j24dn")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.614
anchor_top = 0.529
anchor_right = 0.883
anchor_bottom = 0.529
offset_left = 0.0799561
offset_top = -61.88
offset_right = -0.23999
offset_bottom = 62.12
theme_override_styles/panel = SubResource("StyleBoxFlat_bs8a2")

[node name="Button" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.614
anchor_top = 0.3
anchor_right = 0.877
anchor_bottom = 0.3
offset_left = 0.0799561
offset_top = -51.0
offset_right = 0.439941
offset_bottom = 51.0
theme_override_colors/font_color = Color(0.384314, 0.47451, 0.52549, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_us1tt")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_aplfh")
theme_override_styles/hover = SubResource("StyleBoxFlat_bags8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8haym")
text_overrun_behavior = 3

[node name="Label" type="Label" parent="CanvasLayer/Control/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Guía Digital del Docente"
label_settings = SubResource("LabelSettings_obaxc")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Button2" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.616
anchor_top = 0.677
anchor_right = 0.878
anchor_bottom = 0.677
offset_left = 0.36792
offset_top = -73.696
offset_right = 0.543945
offset_bottom = -22.696
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.384314, 0.47451, 0.52549, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_us1tt")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_jnt4d")
theme_override_styles/hover = SubResource("StyleBoxFlat_pcsnd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_a6x80")
text = "Presentaciones"

[node name="Button3" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.617
anchor_top = 0.772
anchor_right = 0.878
anchor_bottom = 0.772
offset_left = 0.215942
offset_top = -77.256
offset_right = 1.54395
offset_bottom = -26.256
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.384314, 0.47451, 0.52549, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_us1tt")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_jnt4d")
theme_override_styles/hover = SubResource("StyleBoxFlat_pcsnd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_a6x80")
text = "Ítems de evaluación"

[node name="JsonRequest" type="HTTPRequest" parent="CanvasLayer/Control"]

[node name="CheckInternetAgain" type="Timer" parent="CanvasLayer/Control"]
one_shot = true

[node name="ModalNet" type="Control" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_6gef0")

[node name="Panel" type="Panel" parent="CanvasLayer/Control/ModalNet"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 229.0
offset_top = 123.0
offset_right = -261.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3bi21")

[node name="CloseModalBtn" type="TextureButton" parent="CanvasLayer/Control/ModalNet/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -34.0
offset_top = -22.0
offset_right = 36.0
offset_bottom = 35.0
grow_horizontal = 0
texture_normal = ExtResource("9_bynxh")
texture_pressed = ExtResource("10_rjl4u")
texture_hover = ExtResource("10_rjl4u")
stretch_mode = 4

[node name="Label" type="Label" parent="CanvasLayer/Control/ModalNet/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.038
anchor_top = 0.133
anchor_right = 0.939
anchor_bottom = 0.409
offset_left = -0.0200024
offset_top = -0.111
offset_right = 0.189941
offset_bottom = -0.00300598
grow_horizontal = 2
grow_vertical = 2
text = "Su conección a internet se ha restablecido. ¿quiere revisar si hay actualizaciones en sus documentos?"
label_settings = SubResource("LabelSettings_1ixde")
horizontal_alignment = 3
autowrap_mode = 2

[node name="UpdateBtn" type="Button" parent="CanvasLayer/Control/ModalNet/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.175
anchor_top = 0.595
anchor_right = 0.776
anchor_bottom = 0.79
offset_left = -0.250015
offset_top = 0.134979
offset_right = -0.0400391
offset_bottom = 0.0699768
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_us1tt")
theme_override_font_sizes/font_size = 19
theme_override_styles/normal = SubResource("StyleBoxFlat_c0lun")
theme_override_styles/hover = SubResource("StyleBoxFlat_dotgt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_46avw")
text = "Verificar actualizaciones de documentos"

[connection signal="mouse_entered" from="CanvasLayer/Control/Button" to="CanvasLayer/Control" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Control/Button" to="CanvasLayer/Control" method="_on_button_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Control/Button" to="CanvasLayer/Control" method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button2" to="CanvasLayer/Control" method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button3" to="CanvasLayer/Control" method="_on_button_3_pressed"]
[connection signal="request_completed" from="CanvasLayer/Control/JsonRequest" to="CanvasLayer/Control" method="_on_http_request_request_completed"]
[connection signal="timeout" from="CanvasLayer/Control/CheckInternetAgain" to="CanvasLayer/Control" method="_on_check_internet_again_timeout"]
[connection signal="pressed" from="CanvasLayer/Control/ModalNet/Panel/CloseModalBtn" to="CanvasLayer/Control/ModalNet" method="_on_close_modal_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/ModalNet/Panel/UpdateBtn" to="CanvasLayer/Control/ModalNet" method="_on_update_btn_pressed"]

[editable path="CanvasLayer/Control/superiorButtons"]
